--- a/xem-phim-moi/tham-tu-lung-danh-conan-26-tau-ngam-sat-mau-den/index.html
+++ b/xem-phim-moi/tham-tu-lung-danh-conan-26-tau-ngam-sat-mau-den/index.html
@@ -1197,7 +1197,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             13
+             14
             </dd>
             <br/>
            </dl>
@@ -1777,18 +1777,62 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/sau-thang-va-mot-nam" title="Sáu Tháng Và Một Năm">
+          <a class="list-top-movie-link" href="/phim-moi/hop-dong-beo-bo" title="Hợp Đồng Béo Bỡ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sau-thang-va-mot-nam-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hop-dong-beo-bo-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Sáu Tháng Và Một Năm
+             Hợp Đồng Béo Bỡ
             </span>
             <span class="list-top-movie-item-en">
-             Drawing Closer
+             War Dogs
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/vung-dat-ba-lan" title="Vùng đất Ba Lan">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vung-dat-ba-lan-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Vùng đất Ba Lan
+            </span>
+            <span class="list-top-movie-item-en">
+             The Land
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/khach-san-continental-tu-the-gioi-cua-john-wick" title="Khách Sạn Continental: Từ Thế Giới của John Wick">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khach-san-continental-tu-the-gioi-cua-john-wick-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Khách Sạn Continental: Từ Thế Giới của John Wick
+            </span>
+            <span class="list-top-movie-item-en">
+             The Continental: From the World of John Wick
             </span>
             <span class="list-top-movie-item-view">
              0 lượt xem
@@ -1799,87 +1843,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tinh-yeu-chon-do-thi" title="Tình Yêu Chốn Đô Thị">
+          <a class="list-top-movie-link" href="/phim-moi/thi-tran-fargo-phan-2" title="Thị Trấn Fargo (Phần 2)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tinh-yeu-chon-do-thi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/di-qua-xa-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tình Yêu Chốn Đô Thị
+             Thị Trấn Fargo (Phần 2)
             </span>
             <span class="list-top-movie-item-en">
-             Lovestruck in the City
+             Fargo (Season 2)
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/hien-linh" title="Hiển Linh">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hien-linh-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Hiển Linh
+            </span>
+            <span class="list-top-movie-item-en">
+             The Apparition
             </span>
             <span class="list-top-movie-item-view">
              4 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chuong-nguyen-hon-ai" title="Chuông Nguyện Hồn Ai">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chuong-nguyen-hon-ai-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Chuông Nguyện Hồn Ai
-            </span>
-            <span class="list-top-movie-item-en">
-             Repulsion
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/song-the-sung-phi" title="Song Thế Sủng Phi">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/song-the-sung-phi-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Song Thế Sủng Phi
-            </span>
-            <span class="list-top-movie-item-en">
-             The Eternal Love
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/co-nang-dien-vien-quyen-ru" title="Cô Nàng Diễn Viên Quyến Rũ">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-nang-dien-vien-quyen-ru-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Cô Nàng Diễn Viên Quyến Rũ
-            </span>
-            <span class="list-top-movie-item-en">
-             음부보여주며유혹하는섹녀
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
