add new website from server na

--- a/xem-phim-moi/tham-tu-lung-danh-conan-26-tau-ngam-sat-mau-den/index.html
+++ b/xem-phim-moi/tham-tu-lung-danh-conan-26-tau-ngam-sat-mau-den/index.html
@@ -1197,7 +1197,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             14
+             15
             </dd>
             <br/>
            </dl>
@@ -1777,18 +1777,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hop-dong-beo-bo" title="Hợp Đồng Béo Bỡ">
+          <a class="list-top-movie-link" href="/phim-moi/the-gioi-vien-tay-phan-4" title="Thế Giới Viễn Tây (Phần 4)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hop-dong-beo-bo-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-gioi-vien-tay-phan-4-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hợp Đồng Béo Bỡ
+             Thế Giới Viễn Tây (Phần 4)
             </span>
             <span class="list-top-movie-item-en">
-             War Dogs
+             Westworld (Season 4)
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/vua-ban-tia" title="Vua Bắn Tỉa">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vua-ban-tia-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Vua Bắn Tỉa
+            </span>
+            <span class="list-top-movie-item-en">
+             The Sniper
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1799,87 +1821,65 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/vung-dat-ba-lan" title="Vùng đất Ba Lan">
+          <a class="list-top-movie-link" href="/phim-moi/lyle-chu-ca-sau-biet-hat" title="Lyle, Chú Cá Sấu Biết Hát">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vung-dat-ba-lan-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lyle-chu-ca-sau-biet-hat-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Vùng đất Ba Lan
+             Lyle, Chú Cá Sấu Biết Hát
             </span>
             <span class="list-top-movie-item-en">
-             The Land
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/khach-san-continental-tu-the-gioi-cua-john-wick" title="Khách Sạn Continental: Từ Thế Giới của John Wick">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khach-san-continental-tu-the-gioi-cua-john-wick-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Khách Sạn Continental: Từ Thế Giới của John Wick
-            </span>
-            <span class="list-top-movie-item-en">
-             The Continental: From the World of John Wick
-            </span>
-            <span class="list-top-movie-item-view">
-             0 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thi-tran-fargo-phan-2" title="Thị Trấn Fargo (Phần 2)">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/di-qua-xa-2-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Thị Trấn Fargo (Phần 2)
-            </span>
-            <span class="list-top-movie-item-en">
-             Fargo (Season 2)
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hien-linh" title="Hiển Linh">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hien-linh-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Hiển Linh
-            </span>
-            <span class="list-top-movie-item-en">
-             The Apparition
+             Lyle, Lyle, Crocodile
             </span>
             <span class="list-top-movie-item-view">
              4 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/nu-hoang-trinh-tham" title="Nữ Hoàng Trinh Thám">
+           <span class="status">
+            HD Thuyết Minh
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nu-hoang-trinh-tham-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Nữ Hoàng Trinh Thám
+            </span>
+            <span class="list-top-movie-item-en">
+             Queen Of Mystery - Mystery Queen
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/vo-hiep-de-nu-hoa" title="Võ Hiệp Đế Nữ Hoa">
+           <span class="status">
+            HD Lồng Tiếng
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vo-hiep-de-nu-hoa-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Võ Hiệp Đế Nữ Hoa
+            </span>
+            <span class="list-top-movie-item-en">
+             Princess Cheung Ping
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
