add new website from server na

--- a/xem-phim-bo/that-hinh-dai-toi-tu-ky-si-khai-huyen/index.html
+++ b/xem-phim-bo/that-hinh-dai-toi-tu-ky-si-khai-huyen/index.html
@@ -1195,7 +1195,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             4
+             5
             </dd>
             <br/>
            </dl>
@@ -1753,62 +1753,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cau-be-sieu-nang-luc-phan-1" title="Cậu bé siêu năng lực (Phần 1)">
+          <a class="list-top-movie-link" href="/phim-moi/ginny-va-sunny-co-dau-chu-re" title="Ginny và Sunny, cô dâu chú rể">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cau-be-sieu-nang-luc-phan-1-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ginny-va-sunny-co-dau-chu-re-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cậu bé siêu năng lực (Phần 1)
+             Ginny và Sunny, cô dâu chú rể
             </span>
             <span class="list-top-movie-item-en">
-             Mob Psycho 100 (Season 1)
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cung-nhau-hit-tho-sau" title="Cùng Nhau Hít Thở Sâu">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cung-nhau-hit-tho-sau-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Cùng Nhau Hít Thở Sâu
-            </span>
-            <span class="list-top-movie-item-en">
-             Breath of Destiny
-            </span>
-            <span class="list-top-movie-item-view">
-             4 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/roi-khoi-las-vegas" title="Rời Khỏi Las Vegas">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/roi-khoi-las-vegas-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Rời Khỏi Las Vegas
-            </span>
-            <span class="list-top-movie-item-en">
-             Leaving Las Vegas
+             Ginny Weds Sunny
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1819,18 +1775,62 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nguoi-khong-lo-xanh" title="Người khổng lồ xanh">
+          <a class="list-top-movie-link" href="/phim-moi/dep-trai-la-so-mot" title="Đẹp Trai Là Số Một">
            <span class="status">
-            HD Vietsub
+            HD Vietsub + Thuyết minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-khong-lo-xanh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dep-trai-la-so-mot-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Người khổng lồ xanh
+             Đẹp Trai Là Số Một
             </span>
             <span class="list-top-movie-item-en">
-             Hulk
+             Intense Love
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/vuon-thu-tinh-yeu-2" title="Vườn Thú Tình Yêu">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vuon-thu-tinh-yeu-2011-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Vườn Thú Tình Yêu
+            </span>
+            <span class="list-top-movie-item-en">
+             Zookeeper
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/thong-long-ma-2" title="Thòng lọng ma 2">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thong-long-ma-2-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Thòng lọng ma 2
+            </span>
+            <span class="list-top-movie-item-en">
+             The Rope Curse 2
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1841,21 +1841,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nu-hoang-mat-na" title="Nữ Hoàng Mặt Nạ">
+          <a class="list-top-movie-link" href="/phim-moi/linh-hon-ma-quai" title="Linh Hồn Ma Quái">
            <span class="status">
-            FHD Vietsub
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nu-hoang-mat-na-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/linh-hon-ma-quai-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nữ Hoàng Mặt Nạ
+             Linh Hồn Ma Quái
             </span>
             <span class="list-top-movie-item-en">
-             Queen of Masks
+             The Canal
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
