--- a/xem-phim-moi/truy-tim-phep-thuat/index.html
+++ b/xem-phim-moi/truy-tim-phep-thuat/index.html
@@ -1185,7 +1185,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             6
+             7
             </dd>
             <br/>
            </dl>
@@ -1655,18 +1655,62 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/gia-dinh-sieu-nhan" title="Gia Đình Siêu Nhân">
+          <a class="list-top-movie-link" href="/phim-moi/nguoi-hobbit-3-dai-chien-5-canh-quan" title="Người Hobbit 3: Đại chiến 5 cánh quân">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/gia-dinh-sieu-nhan-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-hobbit-3-dai-chien-5-canh-quan-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Gia Đình Siêu Nhân
+             Người Hobbit 3: Đại chiến 5 cánh quân
             </span>
             <span class="list-top-movie-item-en">
-             The Incredibles
+             The Hobbit 3: The Battle of the Five Armies
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/toi-thue-mot-nguoi-tinh" title="Tôi Thuê Một Người Tình">
+           <span class="status">
+            HD Thuyết Minh
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/toi-thue-mot-nguoi-tinh-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Tôi Thuê Một Người Tình
+            </span>
+            <span class="list-top-movie-item-en">
+             Love Me Or Leave Me
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/chang-trai-nam-ay" title="Chàng trai năm ấy">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chang-trai-nam-ay-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Chàng trai năm ấy
+            </span>
+            <span class="list-top-movie-item-en">
+             Dandelion
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1677,18 +1721,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hellsing" title="Hellsing">
+          <a class="list-top-movie-link" href="/phim-moi/truyen-co-tich-thieu-nu-thoi-taisho" title="Truyện Cổ Tích Thiếu Nữ Thời Taisho">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hellsing-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/truyen-co-tich-thieu-nu-thoi-taisho-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hellsing
+             Truyện Cổ Tích Thiếu Nữ Thời Taisho
             </span>
             <span class="list-top-movie-item-en">
-             Hellsing
+             Taishou Otome Otogibanashi
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1699,65 +1743,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bai-kien-cung-chu-dai-nhan-2" title="Bái Kiến Cung Chủ Đại Nhân 2">
+          <a class="list-top-movie-link" href="/phim-moi/danh-du-phan-1" title="Danh Dự (Phần 1)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bai-kien-cung-chu-dai-nhan-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/danh-du-phan-1-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bái Kiến Cung Chủ Đại Nhân 2
+             Danh Dự (Phần 1)
             </span>
             <span class="list-top-movie-item-en">
-             Your Highness 2
+             One Tree Hill
             </span>
             <span class="list-top-movie-item-view">
-             5 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tarzan-va-jane-phan-1" title="Tarzan và Jane (Phần 1)">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tarzan-va-jane-phan-1-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Tarzan và Jane (Phần 1)
-            </span>
-            <span class="list-top-movie-item-en">
-             Edgar Rice Burroughs' Tarzan and Jane (Season 1)
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/canh-dong-xuong" title="Cánh Đồng Xương">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/canh-dong-xuong-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Cánh Đồng Xương
-            </span>
-            <span class="list-top-movie-item-en">
-             Boneyard
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
