--- a/xem-phim-moi/truy-tim-phep-thuat/index.html
+++ b/xem-phim-moi/truy-tim-phep-thuat/index.html
@@ -1185,7 +1185,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             7
+             8
             </dd>
             <br/>
            </dl>
@@ -1598,28 +1598,6 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thieu-nien-ca-hanh" title="Thiếu Niên Ca Hành">
-           <span class="status">
-            FHD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thieu-nien-ca-hanh-2022-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Thiếu Niên Ca Hành
-            </span>
-            <span class="list-top-movie-item-en">
-             The Blood of Youth
-            </span>
-            <span class="list-top-movie-item-view">
-             51 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
           <a class="list-top-movie-link" href="/phim-moi/angel-guts-red-classroom" title="Angel Guts: Red Classroom">
            <span class="status">
             HD Vietsub
@@ -1632,6 +1610,28 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
             </span>
             <span class="list-top-movie-item-en">
              Angel Guts: Red Classroom
+            </span>
+            <span class="list-top-movie-item-view">
+             51 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/thieu-nien-ca-hanh" title="Thiếu Niên Ca Hành">
+           <span class="status">
+            FHD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thieu-nien-ca-hanh-2022-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Thiếu Niên Ca Hành
+            </span>
+            <span class="list-top-movie-item-en">
+             The Blood of Youth
             </span>
             <span class="list-top-movie-item-view">
              51 lượt xem
@@ -1655,62 +1655,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nguoi-hobbit-3-dai-chien-5-canh-quan" title="Người Hobbit 3: Đại chiến 5 cánh quân">
+          <a class="list-top-movie-link" href="/phim-moi/yeu-la-mu-quang-phan-3" title="Yêu là mù quáng (Phần 3)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-hobbit-3-dai-chien-5-canh-quan-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/yeu-la-mu-quang-phan-3-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Người Hobbit 3: Đại chiến 5 cánh quân
+             Yêu là mù quáng (Phần 3)
             </span>
             <span class="list-top-movie-item-en">
-             The Hobbit 3: The Battle of the Five Armies
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/toi-thue-mot-nguoi-tinh" title="Tôi Thuê Một Người Tình">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/toi-thue-mot-nguoi-tinh-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Tôi Thuê Một Người Tình
-            </span>
-            <span class="list-top-movie-item-en">
-             Love Me Or Leave Me
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chang-trai-nam-ay" title="Chàng trai năm ấy">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chang-trai-nam-ay-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Chàng trai năm ấy
-            </span>
-            <span class="list-top-movie-item-en">
-             Dandelion
+             Love Is Blind (Season 3)
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1721,18 +1677,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/truyen-co-tich-thieu-nu-thoi-taisho" title="Truyện Cổ Tích Thiếu Nữ Thời Taisho">
+          <a class="list-top-movie-link" href="/phim-moi/moi-gioi-hoang-hon-phan-3" title="Môi giới hoàng hôn (Phần 3)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/truyen-co-tich-thieu-nu-thoi-taisho-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/moi-gioi-hoang-hon-phan-3-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Truyện Cổ Tích Thiếu Nữ Thời Taisho
+             Môi giới hoàng hôn (Phần 3)
             </span>
             <span class="list-top-movie-item-en">
-             Taishou Otome Otogibanashi
+             Selling Sunset (Season 3)
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/chon-vui-qua-khu" title="Chôn Vùi Quá Khứ">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chon-vui-qua-khu-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Chôn Vùi Quá Khứ
+            </span>
+            <span class="list-top-movie-item-en">
+             Buried in Barstow
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1743,21 +1721,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/danh-du-phan-1" title="Danh Dự (Phần 1)">
+          <a class="list-top-movie-link" href="/phim-moi/nhung-chu-meo-nghi-gi" title="Những chú mèo nghĩ gì">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/danh-du-phan-1-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-chu-meo-nghi-gi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Danh Dự (Phần 1)
+             Những chú mèo nghĩ gì
             </span>
             <span class="list-top-movie-item-en">
-             One Tree Hill
+             Inside the Mind of a Cat
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/rac-roi-be-bi" title="Rắc rối bé bi">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/rac-roi-be-bi-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Rắc rối bé bi
+            </span>
+            <span class="list-top-movie-item-en">
+             Baby Fever
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
